cabal-version:  1.12
name:           aws-lambda-haskell-runtime
version:        4.0.0
synopsis:       Haskell runtime for AWS Lambda
category:       AWS
homepage:       https://github.com/theam/aws-lambda-haskell-runtime#readme
author:         Nikita Tchayka
maintainer:     hackers@theagilemonkeys.com
license-file:   LICENSE
build-type:     Simple
extra-source-files: README.md

source-repository head
  type: git

library
  exposed-modules:
      Aws.Lambda
  other-modules:
      Aws.Lambda.Runtime,
      Aws.Lambda.Runtime.ALB.Types,
      Aws.Lambda.Runtime.API.Endpoints,
      Aws.Lambda.Runtime.API.Version,
      Aws.Lambda.Runtime.APIGateway.Types,
      Aws.Lambda.Runtime.ApiInfo,
      Aws.Lambda.Runtime.Common,
      Aws.Lambda.Runtime.Configuration,
      Aws.Lambda.Runtime.Context,
      Aws.Lambda.Runtime.Environment,
      Aws.Lambda.Runtime.Error,
      Aws.Lambda.Runtime.Publish,
      Aws.Lambda.Runtime.StandaloneLambda.Types,
      Aws.Lambda.Setup,
      Aws.Lambda.Utilities,
      Paths_aws_lambda_haskell_runtime
  hs-source-dirs:
      src
  default-extensions: TemplateHaskell OverloadedStrings RecordWildCards ScopedTypeVariables DeriveGeneric TypeApplications FlexibleContexts DeriveAnyClass QuasiQuotes
  ghc-options: -Wall -Werror -optP-Wno-nonportable-include-path -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat -Widentities -Wredundant-constraints -Wmissing-export-lists -Wpartial-fields -fhide-source-paths -freverse-errors
  build-depends:
      aeson
    , base
    , bytestring
    , case-insensitive
    , exceptions
    , hashable
    , http-client
    , http-types
    , mtl
    , path
    , path-io
    , safe-exceptions-checked
    , template-haskell
    , text
    , unordered-containers
  default-language: Haskell2010
